# email_syntax_verify_opt

./: Cargo.toml  LICENSe  README.md
benches/: email_validation.rs
src/: constants.rs  error.rs  ip.rs  lib.rs  main.rs  traits.rs  types.rs  validator.rs
tests/: integration_tests.rs  property_based_tests.rs  stress_tests.rs  validation_tests.rs
